cmake_minimum_required(VERSION 2.8)

add_library(${CMAKE_PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/dyad.c
                                  ${CMAKE_CURRENT_SOURCE_DIR}/dyad.h)
set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY C_STANDARD 99)

if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
    target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE -Wall -Wextra -Werror -pedantic)
endif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)

install(TARGETS ${CMAKE_PROJECT_NAME}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)

install(FILES dyad.h DESTINATION include/dyad
        PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ)
